java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {

    implementation "org.keycloak:keycloak-core:$keycloakVersion"
    implementation "org.keycloak:keycloak-services:$keycloakVersion"
    implementation "org.keycloak:keycloak-server-spi:$keycloakVersion"
    implementation "org.keycloak:keycloak-server-spi-private:$keycloakVersion"
    implementation "org.keycloak:keycloak-model-jpa:$keycloakVersion"
    implementation group: 'javax', name: 'javaee-api', version: '8.0.1'

    compileOnly 'org.slf4j:slf4j-api:1.7.22'
}